@@ -10,6 +10,8 @@
 -define(MAX_TEXT_BYTES, 1500).
 -define(MINUTELY_LIMIT, 10000).
 -define(MAX_SPEAKER_ID, 4294967295).
+-define(DEFAULT_SPEAKER_LIST_PATH, <<"/opt/qrpc/etc/q_vvx_worker/speakers.json">>).
+-define(SPEAKER_LIST_CACHE_KEY, {?MODULE, speaker_list}).
 
 super_simple_tts(Rpc) ->
     Speaker = Rpc:get([payload, <<"id">>]),
@@ -43,7 +45,40 @@ ensure_supported_speaker(Speaker)
     when is_integer(Speaker),
          Speaker >= 0,
          Speaker =< ?MAX_SPEAKER_ID ->
-    ok;
+    case supported_speaker_map() of
+        {ok, Speakers} ->
+            case maps:is_key(Speaker, Speakers) of
+                true ->
+                    ok;
+                false ->
+                    ?QRPC_ERROR(#{
+                        id => [q_vvx, core, super_simple_tts, unsupported_speaker]
+                      , fault_source => client
+                      , message => <<"Unsupported speaker">>
+                      , message_ja => <<"未対応の話者です"/utf8>>
+                      , detail => #{
+                            speaker => Speaker
+                        }
+                      , is_known => true
+                      , is_retryable => false
+                      , version => 1
+                    })
+            end;
+        {error, Reason} ->
+            ?QRPC_ERROR(#{
+                id => [q_vvx, core, super_simple_tts, speaker_list_unavailable]
+              , fault_source => server
+              , message => <<"Speaker list unavailable">>
+              , message_ja => <<"話者一覧の読み込みに失敗しました"/utf8>>
+              , detail => #{
+                    reason => Reason
+                  , path => speaker_list_path()
+                }
+              , is_known => true
+              , is_retryable => false
+              , version => 1
+            })
+    end;
 ensure_supported_speaker(Speaker) ->
     ?QRPC_ERROR(#{
         id => [q_vvx, core, super_simple_tts, unsupported_speaker]
@@ -57,6 +92,65 @@ ensure_supported_speaker(Speaker) ->
       , is_retryable => false
       , version => 1
     }).
+
+supported_speaker_map() ->
+    case persistent_term:get(?SPEAKER_LIST_CACHE_KEY, undefined) of
+        {ok, Speakers} ->
+            {ok, Speakers};
+        undefined ->
+            load_speaker_map()
+    end.
+
+load_speaker_map() ->
+    Path = speaker_list_path(),
+    case file:read_file(Path) of
+        {ok, Binary} ->
+            case parse_speaker_list(Binary, Path) of
+                {ok, Speakers} ->
+                    persistent_term:put(?SPEAKER_LIST_CACHE_KEY, {ok, Speakers}),
+                    {ok, Speakers};
+                {error, Reason} ->
+                    {error, Reason}
+            end;
+        {error, Reason} ->
+            {error, {read_failed, Path, Reason}}
+    end.
+
+parse_speaker_list(Binary, Path) ->
+    try json:decode(Binary) of
+        #{<<"speakers">> := Speakers} when is_list(Speakers) ->
+            case build_speaker_map(Speakers, #{}) of
+                {ok, Map} when map_size(Map) > 0 ->
+                    {ok, Map};
+                {ok, _} ->
+                    {error, {empty_list, Path}};
+                {error, Reason} ->
+                    {error, {invalid_entry, Path, Reason}}
+            end;
+        _ ->
+            {error, {invalid_format, Path}}
+    catch Class:Reason ->
+        {error, {decode_failed, Path, Class, Reason}}
+    end.
+
+build_speaker_map([], Acc) ->
+    {ok, Acc};
+build_speaker_map([Speaker | Rest], Acc) ->
+    case Speaker of
+        #{<<"id">> := Id}
+            when is_integer(Id),
+                 Id >= 0,
+                 Id =< ?MAX_SPEAKER_ID ->
+            build_speaker_map(Rest, maps:put(Id, true, Acc));
+        _ ->
+            {error, Speaker}
+    end.
+
+speaker_list_path() ->
+    qrpc_conf:get(
+        [subsystem, q_vvx, q_vvx_core, speaker_list_path],
+        ?DEFAULT_SPEAKER_LIST_PATH
+    ).
 
 ensure_supported_text(Text)
     when is_binary(Text),
