@@ -75,6 +75,9 @@
   % {subsystem, #{
   %     qrpc => #{} % Basicly, qrpc should use top level config.
   %   , q_vvx => #{
+  %         q_vvx_core => #{
+  %             speaker_list_path => <<"/opt/qrpc/etc/q_vvx_worker/speakers.json">>
+  %         }
   %     }
   % }}
 ]}].
