@@ -115,6 +115,7 @@
             }
           , q_vvx_core => #{
                 wav_s3_profiles => [q_vvx_wav]
+              , speaker_list_path => <<"/opt/qrpc/etc/q_vvx_worker/speakers.json">>
             }
         }
     }}
